[package]
name = "regalloc2-tester"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regalloc2 = {version = "^0.11.1", features = ["std", "checker", "trace-log", "enable-serde"]}
log = "^0.4"
fern = "^0.7"